# cambridge-ket-pet

./: .env.example  .gitignore  README.md  ai.Dockerfile  docker-compose.yml  grade1.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  web.Dockerfile
services/ai/: Dockerfile  README.md  pyproject.toml
services/ai/app/: __init__.py  main.py
services/ai/app/agents/: __init__.py  analysis.py  diagnose_analysis.py  diagnose_generator.py  diagnose_summary.py  grammar_generator.py  listening_generator.py  reading.py  speaking_examiner.py  speaking_generator.py  speaking_scorer.py  vocab_gloss.py  writing.py
services/ai/app/prompts/: __init__.py  analysis.py  diagnose_analysis.py  diagnose_summary.py  grammar_generator_system.py  listening_system.py  reading.py  speaking_examiner_system.py  speaking_generator_system.py  speaking_scorer_system.py  writing.py  (+1 more)
services/ai/tests/: test_analysis_schemas.py  test_analysis_validators.py  test_banned_phrases.py  test_diagnose_analysis.py  test_diagnose_prompts.py  test_diagnose_schemas.py  test_diagnose_validators.py  test_grammar_generator.py  test_grammar_schemas.py  test_grammar_validators.py  test_length_caps.py  test_listening_regenerate.py  test_listening_schema.py  test_listening_validators_ket.py  test_listening_validators_pet.py  test_reading_validators.py  test_speaking_examiner.py  test_speaking_generator.py  test_speaking_routes.py  test_speaking_schemas.py  test_speaking_scorer.py  test_speaking_validators.py  test_vocab_gloss.py  test_vocab_schemas.py  test_vocab_validators.py  test_writing_validators.py
(+409 files in other folders)
